--- a/ir/src/main/res/values/strings.xml
+++ b/ir/src/main/res/values/strings.xml
@@ -4,16 +4,31 @@
     <string name="app_name">Sony IR Remoute</string>
     <string name="action_settings">Settings</string>
 
+    <string name="pwr_btn">Power ON/OFF</string>
+    <string name="Write_signal">Write signal</string>
+    <string name="ChanelPl">Chanel +</string>
+    <string name="ChanelMn">Chanel -</string>
+    <string name="VolPl">Vol +</string>
+    <string name="VolMn">Vol -</string>
+    <string name="Up">Up</string>
+    <string name="Down">Down</string>
+    <string name="Left">Left</string>
+    <string name="Right">Right</string>
+    <string name="Enter">Enter</string>
+
+    <string name="path">Path to keys</string>
+    <string name="save">Save</string>
+
+    <string name="irpath">/sdcard/ir/</string>
+
     <string name="brand_prompt">Choose your TV`s brand</string>
 
     <string-array name="brand_arrays">
-        <item>Sony</item>
+        <item>sony</item>
     </string-array>
 
     <string-array name="item_arrays">
-        <item>TV</item>
+        <item>tv</item>
     </string-array>
-
-    <string name="log">Log:</string>
 
 </resources>
