--- a/ir/src/main/res/values/strings.xml
+++ b/ir/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
         <string name="action_settings">Settings</string>
         <string name="add">Add</string>
         <string name="add_brnd">Add new device</string>
-        <string name="app_name">Sony IR Remoute</string>
+        <string name="app_name">Sony IR Remote</string>
         <string name="brand">Brand:</string>
         <string name="brand_prompt">Choose your TV`s brand</string>
         <string name="go_back">Back to main menu</string>
@@ -39,6 +39,6 @@
         <string name="about">About</string>
         <string name="license1">Copyright © 2014 Emil Suleymanov</string>
         <string name="license2">Distributed under the GNU GPL v2. For full terms see the file LICENSE.</string>
-        <string name="license3">Source code is available at https://github.com/sssemil/SonyIRRemoute .</string>
+        <string name="license3">Source code is available at https://github.com/sssemil/SonyIRRemote .</string>
         <string name="license4">Using lib_sony_ir from BuzzBumbleBee (https://github.com/BuzzBumbleBee/lib_sony_ir).</string>
     </resources>
