--- a/ir/src/main/res/values/strings.xml
+++ b/ir/src/main/res/values/strings.xml
@@ -13,32 +13,36 @@
         <item>tv</item>
     </string-array>
 
-        <string name="ChanelMn">Chanel -</string>
-        <string name="ChanelPl">Chanel +</string>
-        <string name="Down">Down</string>
-        <string name="Enter">Enter</string>
-        <string name="Left">Left</string>
-        <string name="Right">Right</string>
-        <string name="Send_signal">Leave Write mode</string>
-        <string name="Up">Up</string>
-        <string name="VolMn">Vol -</string>
-        <string name="VolPl">Vol +</string>
-        <string name="Write_signal">Switch to Write mode</string>
-        <string name="action_settings">Settings</string>
-        <string name="add">Add</string>
-        <string name="add_brnd">Add new device</string>
-        <string name="app_name">Sony IR Remote</string>
-        <string name="brand">Brand:</string>
-        <string name="brand_prompt">Choose your TV`s brand</string>
-        <string name="go_back">Back to main menu</string>
-        <string name="irpath">/sdcard/ir/</string>
-        <string name="item">Type:</string>
-        <string name="path">Path to keys</string>
-        <string name="pwr_btn">Power ON/OFF</string>
-        <string name="save">Save</string>
-        <string name="about">About</string>
-        <string name="license1">Copyright © 2014 Emil Suleymanov</string>
-        <string name="license2">Distributed under the GNU GPL v2. For full terms see the file LICENSE.</string>
-        <string name="license3">Source code is available at https://github.com/sssemil/SonyIRRemote .</string>
-        <string name="license4">Using lib_sony_ir from BuzzBumbleBee (https://github.com/BuzzBumbleBee/lib_sony_ir).</string>
-    </resources>
+    <string name="ChanelMn">Chanel -</string>
+    <string name="ChanelPl">Chanel +</string>
+    <string name="Down">Down</string>
+    <string name="Enter">Enter</string>
+    <string name="Left">Left</string>
+    <string name="Right">Right</string>
+    <string name="Send_signal">Leave Write mode</string>
+    <string name="Up">Up</string>
+    <string name="VolMn">Vol -</string>
+    <string name="VolPl">Vol +</string>
+    <string name="Write_signal">Switch to Write mode</string>
+    <string name="action_settings">Settings</string>
+    <string name="add">Add</string>
+    <string name="add_brnd">Add new device</string>
+    <string name="app_name">Sony IR Remote</string>
+    <string name="brand">Brand:</string>
+    <string name="brand_prompt">Choose your TV`s brand</string>
+    <string name="go_back">Back to main menu</string>
+    <string name="irpath">/sdcard/ir/</string>
+    <string name="item">Type:</string>
+    <string name="path">Path to keys</string>
+    <string name="pwr_btn">Power ON/OFF</string>
+    <string name="save">Save</string>
+    <string name="about">About</string>
+    <string name="license1">Copyright © 2014 Emil Suleymanov</string>
+    <string name="license2">Distributed under the GNU GPL v2. For full terms see the file LICENSE.</string>
+    <string name="license3">Source code is available at https://github.com/sssemil/SonyIRRemote .</string>
+    <string name="license4">Using lib_sony_ir from BuzzBumbleBee (https://github.com/BuzzBumbleBee/lib_sony_ir).</string>
+
+    <string name="mute">Mute</string>
+    <string name="input">TV</string>
+    <string name="home">Home</string>
+</resources>
