--- a/ir/src/main/res/values/strings.xml
+++ b/ir/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="remove">Remove</string>
 
     <string name="exit">Exit</string>
+    <string name="update">Update</string>
 </resources>
