--- a/ir/src/main/res/values/strings.xml
+++ b/ir/src/main/res/values/strings.xml
@@ -59,10 +59,10 @@ Try now?</string>
     <string name="new_version_available">New version available!
 
 Do you want to update to a newer version?</string>
-    <string name="downloading_new">Downloading new version...</string>
+    <string name="downloading_new">Downloading new version…</string>
     <string name="already_new">You already have the latest version installed!</string>
     <string name="cancel">Cancel</string>
-    <string name="down_keys">Downloading keys...</string>
+    <string name="down_keys">Downloading keys…</string>
     <string name="failed_lk">Failed! - learnKey </string>
     <string name="failed_sk">Failed! - sendKey </string>
     <string name="fr">Thanks for installing my app!
@@ -71,4 +71,14 @@ Thanks!
     NOTE: This app is under development and it was tested only on Sony Xperia ZL(odin) running CyanogenMod 11!</string>
 
     <string name="welcome">Welcome!</string>
+    <string name="una">1</string>
+    <string name="dos">2</string>
+    <string name="tres">3</string>
+    <string name="cuatro">4</string>
+    <string name="cinco">5</string>
+    <string name="seis">6</string>
+    <string name="ocho">8</string>
+    <string name="nueve">9</string>
+    <string name="cero">0</string>
+    <string name="siete">7</string>
 </resources>
