--- a/ir/src/main/res/values-ru/strings.xml
+++ b/ir/src/main/res/values-ru/strings.xml
@@ -80,4 +80,6 @@
     <string name="nueve">9</string>
     <string name="cero">0</string>
     <string name="siete">7</string>
+    <string name="done">Все!</string>
+    <string name="downloadT">Загрузка</string>
 </resources>
