--- a/ir/src/main/res/values/strings.xml
+++ b/ir/src/main/res/values/strings.xml
@@ -83,4 +83,8 @@ Thanks!
     <string name="siete">7</string>
     <string name="done">Done!</string>
     <string name="downloadT">Download</string>
+    <string name="error">Error</string>
+    <string name="done_removing">Done removing </string>
+    <string name="files"> files!</string>
+    <string name="you_need_to_select">You need to select an option first!</string>
 </resources>
