--- a/ir/src/main/res/values-ru/strings.xml
+++ b/ir/src/main/res/values-ru/strings.xml
@@ -68,4 +68,5 @@
 
 Продолжить?</string>
     <string name="not_exists">Команда для этой кнопки не существует! Хотите записать сейчас?</string>
+    <string name="non_zero">Не удалось отправить сигнал! Статус не равен нулю!</string>
 </resources>
