--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -47,7 +47,6 @@
 Хотите обновиться до последней версии?</string>
     <string name="downloading_new">Обновление скачивается…</string>
     <string name="already_new">Вы уже установили самую последнюю версию!</string>
-    <string name="cancel">Отменить</string>
     <string name="down_keys">Загрузка базы кнопок…</string>
     <string name="failed_lk">Не удалось выучить команду! </string>
     <string name="failed_sk">Не удалось отправить команду! </string>
@@ -70,4 +69,8 @@
     <string name="not_exists">Команда для этой кнопки не существует! Хотите записать сейчас?</string>
     <string name="non_zero">Не удалось отправить сигнал! Статус не равен нулю!</string>
     <string name="failed_del_fl_io">Не удалось удалить файлы!</string>
+    <string name="downloading">Идет загрузка…</string>
+    <string name="pos_ans">Да</string>
+    <string name="cancel">Отменить</string>
+    <string name="checking">Идет проверка…</string>
 </resources>
