--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="http_path_root2" translatable="false">https://raw.githubusercontent.com/sssemil/android_packages_apps_SonyIRRemote/gh-pages/sonyirremote/</string>
     <string name="http_path_last_download1" translatable="false">https://github.com/sssemil/SonyIRRemote/blob/gh-pages/sonyirremote/apk/SonyIRRemote-v</string>
     <string name="http_path_last_download2" translatable="false">.apk?raw=true</string>
+    <string name="vol" translatable="false">VOL</string>
+    <string name="prog" translatable="false">PROG</string>
+    <string name="tstt" translatable="false">-/--</string>
 
     <string name="ChanelMn">Chanel -</string>
     <string name="ChanelPl">Chanel +</string>
@@ -43,7 +46,7 @@
     <string name="license4">Using lib_sony_ir from BuzzBumbleBee (https://github.com/BuzzBumbleBee/lib_sony_ir).</string>
 
     <string name="mute">Mute</string>
-    <string name="input">TV</string>
+    <string name="input">Input</string>
     <string name="home">Home</string>
 
     <string name="download_brnd">Download or remove device files</string>
@@ -114,4 +117,7 @@ Do you want to continue?</string>
     <string name="theme">Theme</string>
     <string name="ch_th">Change theme</string>
     <string name="ch_thD">Select another theme</string>
+    <string name="options">Options</string>
+    <string name="guide">Guide</string>
+    <string name="returnbtn">Return</string>
 </resources>
